A fix (bug #10568: Function 'LAST_DAY(date)' does not return NULL for invalid argument).